samples/_failures_safe/1761374417_925e56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_400854d8.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_400854d8.c:143:9: error: expected expression at end of input
  143 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_400854d8.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_400854d8.c:143:9: error: expected declaration or statement at end of input
